--- a/static/css/password_and_profile.css
+++ b/static/css/password_and_profile.css
@@ -53,6 +53,17 @@ h1 {
     margin: 0 0 0.5em;
 }
 
+.dark-mode h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin: 0 0 0.5em;
+    color: #111111;
+}
+
+.dark-mode .profile-title{
+    color: #111111;
+}
+
 hggroup {
     text-align: center;
     margin-bottom: 4rem;
@@ -83,6 +94,11 @@ form > div {
     width: 100%;
     outline: none;
     transition: border-color 0.3s ease;
+    background-color: transparent;
+}
+
+.dark-mode input{
+    color: #111111;
 }
 
 .mainContainer input:focus {
